Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.0
-
None
-
21b3e2265a06a6bf45ef63f7da3b9dc609c47c31
Description
In case of a bound QUDPSocket waitForReadyRead(int msecs) returns immediately although there are no datagrams received and the timeout is not elapsed. In Qt 5.5 the method blocked when no datagrams were received for msecs milliseconds. Developers who relied on the timeout will experience a high CPU usage.
Attachments
Issue Links
- relates to
-
QTBUG-52714 [REG 5.5->5.6] Network/sockets tests regressing (tst_QUdpSocket, mostly)
-
- Reported
-